[tool.poetry]
name = "rich_interactive"
version = "0.4.0"
description = "Extends the Rich library with interactive layouts and tables, allowing seamless navigation and interaction via keyboard shortcuts"
authors = ["Krzysztof Szumny <noisy.pl@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rich_interactive" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
